Fix clicking issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,18 @@
   font-family: 'Rubik', sans-serif;
  }
 
-.bg {
-  background-image: url(../img/bg.jpg);
-  background-size: cover;
-  background-position: center top;
-  background-repeat: no-repeat;
-  z-index: -1;
-}
-
 @media screen and (min-width:30em) {
   .bg-ns {
-     background-image: url(../img/bg.jpg);
-     background-size: cover;
-     background-position: center top;
-     background-repeat: no-repeat;
-     z-index: -1;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-image: url(../img/bg.jpg);
+    background-size: cover;
+    background-position: center top;
+    background-repeat: no-repeat;
+    z-index: -1;
   }
 }
 
